--- a/AIP.Blazor/AIP.Blazor.csproj
+++ b/AIP.Blazor/AIP.Blazor.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AIP.Plugins\AIP.Plugins.InMemory\AIP.Plugins.InMemory.csproj" />
+    <ProjectReference Include="..\AIP.UseCases\AIP.UseCases.csproj" />
+  </ItemGroup>
+
 </Project>
